# ppl-interpreter

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  data.csv  ppl_run  ppl_tests  run_tests  test_parser  validate.py
include/: AnyRNG.h  Distribution.h  Expr.h  HOPPLParser.h  InferenceController.h  Instruction.h  LikelihoodWeighting.h  Machine.h  Message.h  PPLRunner.h  Primitives.h  PrintVisitor.h  SSMetropolisHastings.h  SequentialMonteCarlo.h  Value.h
ppl_programs/: 8bit_model.txt  flip_model.txt  linreg.txt  random_walk_model.txt  test1_parser  test1_parser.txt  test_machine_eval_1.txt  test_machine_eval_2.txt  test_machine_eval_3.txt  test_machine_eval_4.txt  test_machine_eval_5.txt  test_machine_fn_1.txt  test_machine_fn_2.txt  test_machine_fn_3.txt  test_machine_if_1.txt  test_machine_if_2.txt  test_machine_if_3.txt  test_machine_let_1.txt  test_machine_let_2.txt  test_machine_let_3.txt
src/: Distribution.cpp  HOPPLParser.cpp  InferenceController.cpp  LikelihoodWeighting.cpp  Machine.cpp  PPLRunner.cpp  Primitives.cpp  SSMetropolisHastings.cpp  SequentialMonteCarlo.cpp  main.cpp  tests.cpp
tests/: tests.cpp
